@@ -56,9 +56,9 @@ copyright = u'2014, Thomas Mistelbauer'
 # built documents.
 #
 # The short X.Y version.
-version = '0.2.0'
+version = '0.3.0'
 # The full version, including alpha/beta/rc tags.
-release = '0.2.0'
+release = '0.3.0 beta'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
