@@ -1,0 +1,38 @@
+poets.time_series package
+=========================
+
+Submodules
+----------
+
+poets.time_series.cdi module
+----------------------------
+
+.. automodule:: poets.time_series.cdi
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+poets.time_series.deseasonalizing module
+----------------------------------------
+
+.. automodule:: poets.time_series.deseasonalizing
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+poets.time_series.filtering module
+----------------------------------
+
+.. automodule:: poets.time_series.filtering
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+
+Module contents
+---------------
+
+.. automodule:: poets.time_series
+    :members:
+    :undoc-members:
+    :show-inheritance:
