@@ -1,0 +1,38 @@
+poets.web package
+=================
+
+Submodules
+----------
+
+poets.web.app module
+--------------------
+
+.. automodule:: poets.web.app
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+poets.web.ol_img module
+-----------------------
+
+.. automodule:: poets.web.ol_img
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+poets.web.overlays module
+-------------------------
+
+.. automodule:: poets.web.overlays
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+
+Module contents
+---------------
+
+.. automodule:: poets.web
+    :members:
+    :undoc-members:
+    :show-inheritance:
